--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "jquery": "^3.5.1",
     "meteor-node-stubs": "^1.0.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.4"
   }
 }
