--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "meteor-node-stubs": "^1.0.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "sudoku": "0.0.3"
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.4"
